# BreakoutGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Ball.h  Brick.h  Game.h  Level.h  LevelManager.h  Paddle.h
src/: Ball.cpp  Brick.cpp  Game.cpp  LevelManager.cpp  Paddle.cpp  level.cpp  main.cpp
